# CausalShenanigans

./: README.md  blog_generator.py  braindump.md  pyproject.toml
.github/workflows/: blog-generator.yml
docs/: index.html  style.css
docs/posts/: 2025-01-02-test-for-blog-post-with-visualization.html  2025-test-for-blog-post-with-visualization.html  test.html
docs/templates/: post_template.html
final/: blog_test_visualization.ipynb
src/: blog_test.ipynb  causal_collab.py  collider_bias_matching.py  collider_test.ipynb  curious_tale.ipynb
