[tool.poetry]
name = "causalshenanigans"
version = "0.1.0"
description = ""
authors = ["StefanSko <Stefan.sko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
matplotlib = "3.8.0"
jupyter = "1.1.1"
statsmodels = "0.14.4"
sm = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
